--- a/NWSense5Theme/AndroidManifest.xml
+++ b/NWSense5Theme/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.orbar.nwSense5theme"
+    package="com.orbar.nwsense5theme"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.orbar.nwSense5theme.MainActivity"
+            android:name="com.orbar.nwsense5theme.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
